--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <ul>
      <li><a href="activity-1/index.html">Activiity 1</a></li>
      <li><a href="activity-2/index.html">Activiity 2</a></li>
+     <li><a href="activity-3/index.html">Activiity 3</a></li>
 </ul>
 </body>
 </html>
