--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
      <li><a href="activity-1/index.html">Activiity 1</a></li>
      <li><a href="activity-2/index.html">Activiity 2</a></li>
      <li><a href="activity-3/index.html">Activiity 3</a></li>
+     <li><a href="activity-4/index.html">Activiity 4</a></li>
 </ul>
 </body>
 </html>
