--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
      <li><a href="activity-2/index.html">Activiity 2</a></li>
      <li><a href="activity-3/index.html">Activiity 3</a></li>
      <li><a href="activity-4/index.html">Activiity 4</a></li>
+     <li><a href="activity-5/index.html">Activiity 5</a></li>
 </ul>
 </body>
 </html>
